Table dim_author {
  id int [pk, increment]
  name varchar [unique, not null]
  country varchar
  birth_year int
}

Table dim_publisher {
  id int [pk, increment]
  name varchar [unique, not null]
  country varchar
}

Table dim_book {
  id int [pk, increment]
  title varchar [not null]
  isbn varchar [unique, not null]
  annotation text
  publication_year int [not null]
  pages int
  publisher_id int
}

Table dim_genre {
  id int [pk, increment]
  name varchar [unique, not null]
}

Table dim_language {
  id int [pk, increment]
  code varchar [unique, not null]
  name varchar
}

Table book_genres {
  book_id int [pk]
  genre_id int [pk]
}

Table book_languages {
  book_id int [pk]
  language_id int [pk]
}

Table book_authors {
  book_id int [pk]
  author_id int [pk]
}

Table dim_book_copy {
  id int [pk, increment]
  book_id int [not null]
  inventory_code varchar [not null]
  condition varchar [not null, default: 'good']
}

Table dim_library {
  id int [pk, increment]
  name varchar [unique, not null]
  city varchar [not null]
  address varchar [not null]
}

Table dim_reader {
  id int [pk, increment]
  full_name varchar [not null]
  email varchar [unique, not null]
  phone varchar
  birth_date date
  registered_at timestamp [not null]
}

Table dim_librarian {
  id int [pk, increment]
  full_name varchar [not null]
  email varchar [unique, not null]
}

Table dim_shelf {
  id int [pk, increment]
  library_id int [not null]
  code varchar [not null]
  section varchar
}

Table book_position {
  id int [pk, increment]
  book_copy_id int [not null]
  shelf_id int [not null]
  row int
  column int
  depth int
}

Table book_images {
  id int [pk, increment]
  book_id int [not null]
  file_path varchar [not null]
  image_type varchar [not null, default: 'cover']
  display_order int [default: 0]
}

Table fact_loans {
  id int [pk, increment]
  book_copy_id int [not null]
  reader_id int [not null]
  library_id int [not null]
  status varchar [not null, default: 'active']
  borrowed_at timestamp [not null]
  return_date timestamp
  fine_amount decimal [default: 0.0]
}

Table librarian_library {
  librarian_id int [pk]
  library_id int [pk]
}

Table audit_logs {
  id int [pk, increment]
  user_id int [not null]
  action varchar [not null]
  entity_type varchar
  description varchar [not null]
  success boolean [default: true]
  meta json
  created_at timestamp [not null]
}

Ref: book_authors.book_id > dim_book.id [delete: cascade]
Ref: book_authors.author_id > dim_author.id [delete: cascade]

Ref: book_genres.book_id > dim_book.id [delete: cascade]
Ref: book_genres.genre_id > dim_genre.id [delete: cascade]

Ref: book_languages.book_id > dim_book.id [delete: cascade]
Ref: book_languages.language_id > dim_language.id [delete: cascade]

Ref: dim_book.publisher_id > dim_publisher.id [delete: set null]
Ref: dim_book_copy.book_id > dim_book.id [delete: cascade]

Ref: dim_shelf.library_id > dim_library.id [delete: cascade]

Ref: book_position.book_copy_id > dim_book_copy.id [delete: cascade]
Ref: book_position.shelf_id > dim_shelf.id [delete: cascade]

Ref: book_images.book_id > dim_book.id [delete: cascade]

Ref: fact_loans.book_copy_id > dim_book_copy.id [delete: cascade]
Ref: fact_loans.reader_id > dim_reader.id [delete: cascade]
Ref: fact_loans.library_id > dim_library.id [delete: cascade]

Ref: librarian_library.librarian_id > dim_librarian.id [delete: cascade]
Ref: librarian_library.library_id > dim_library.id [delete: cascade]
